# llambda

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_import.yml
examples/notebooks/: llm_icl_vec.ipynb  wishful.ipynb
llambda/configs/: __init__.py
llambda/configs/attn_head_configs/: __init__.py  heads.py
llambda/func_vector/: __init__.py  utils.py
llambda/guiding/: guiding.py
