[tool.poetry]
name = "llambda"
version = "0.0.1"
description = "Easy way to create natural language mappers"
authors = ["Berke Can Rizai <berkecanrizai1@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.10"

# Add your project dependencies here
# Example:
# requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


line-length = 88
target-version = ['py38']
exclude = '''
    /(
        \.git
      | \.venv
    )/
'''
